feat: adjust backend for pagination