@@ -1,11 +1,14 @@
 package com.example.scrapeservice.service.impl;
 
+import com.example.scrapeservice.dto.PaginatedProductResponse;
 import com.example.scrapeservice.dto.ProductDTO;
 import com.example.scrapeservice.mapper.ProductDTOMapper;
 import com.example.scrapeservice.model.Product;
 import com.example.scrapeservice.repository.ProductRepository;
 import com.example.scrapeservice.service.ProductService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
@@ -24,20 +27,29 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.save(product);
     }
 
-    public List<ProductDTO> getAllProducts(String searchTerm, String storeIds) {
-        List<Integer> storeIdList = storeIds != null ?
+    @Override
+    public PaginatedProductResponse getAllProducts(String searchTerm, String storeIds, PageRequest pageRequest) {
+        List<Integer> storeIdList = storeIds != null && !storeIds.isEmpty() ?
                 Arrays.stream(storeIds.split(","))
                         .map(String::trim)
-                        .map(Integer::parseInt).toList()
-                : List.of();
+                        .map(Integer::parseInt)
+                        .collect(Collectors.toList())
+                : List.of(); // Empty list if no stores are selected
 
-        return productRepository.findAll()
-                .stream()
-                .filter(product ->
-                        (searchTerm == null || product.getTitle().toLowerCase().contains(searchTerm.toLowerCase())) &&
-                                (storeIdList.isEmpty() || storeIdList.contains(product.getPromotion().getStoreByStoreId().getId()))
-                )
+        Page<Product> pageResult = productRepository.findAllWithFilters(
+                searchTerm,
+                storeIdList.isEmpty() ? null : storeIdList, // Pass null if no stores are selected
+                pageRequest
+        );
+
+        List<ProductDTO> products = pageResult.getContent().stream()
                 .map(productDTOMapper)
                 .collect(Collectors.toList());
+
+        return new PaginatedProductResponse(
+                products,
+                pageResult.getTotalPages(),
+                pageResult.getTotalElements()
+        );
     }
 }
